<?xml version="1.0"?>
<package format="2">
  <name>geranos_visual_servoing</name>
  <version>0.0.0</version>
  <description>The geranos_visual_servoing package</description>

  <maintainer email="rtim@ethz.ch">Tim Reinhart</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mav_msgs</depend>  
  <depend>mav_planning_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>mav_trajectory_generation</depend>
  <depend>mav_trajectory_generation_ros</depend>

</package>
